--- a/client/slides.html
+++ b/client/slides.html
@@ -4,7 +4,7 @@
 
 <body>
 	<h1>List of slides</h1>
-	<div id="slide-list">
+	<div>
 		{{> slide_list}}
 	</div>
 </body>
@@ -14,9 +14,16 @@
 	    <input type="text" id="new-slide" placeholder="New slide" />
     </div>
 
-	<table>
+	<ul id="slide-list">
 		{{#each slides}}
-			<tr><td>{{text}}</td></tr>
+			{{> slide}}
 		{{/each}}
-	<table>
+	</ul>
+</template>
+
+<template name="slide">
+	<li class="slide">
+		<div class="destroy"></div>
+		<div class="slide-text">{{text}}</div>
+	</li>
 </template>
