--- a/client/slides.html
+++ b/client/slides.html
@@ -29,7 +29,7 @@
 </template>
 
 <template name="slide">
-	<li class="slide" id="{{_id}}">
+	<li class="slide" id="{{_id}}" ind="{{ind}}">
 		<div class="destroy"></div>
 		<div class="slide-text">{{text}}</div>
 	</li>
@@ -39,4 +39,6 @@
   <span class="button-left"> < </span>
   <span class="current-slide">{{currentSlide}}</span>
   <span class="button-right"> > </span>
+  <span class="shift-up"> ^ </span>
+  <span class="shift-down"> v </span>
 </template>
