--- a/client/slides.html
+++ b/client/slides.html
@@ -6,7 +6,7 @@
   {{renderPage}}
 </body>
 
-<template name="view-edit">
+<template name="view_edit">
   <div id="show-nav">{{> show_nav}}</div>
 	<div id="main-pane">
   	<h1>List of slides</h1>
