new item below selected item. also rendering 'selected' from template

--- a/client/edit/slides.html
+++ b/client/edit/slides.html
@@ -30,7 +30,7 @@
 </template>
 
 <template name="slide">
-	<li class="slide {{showing}}" id="{{_id}}" ind="{{ind}}">
+	<li class="slide {{showing}} {{selected}}" id="{{_id}}" ind="{{ind}}">
 		<div class="destroy"></div>
     <!-- these two can overlap -->
     <div class="statusDot"></div>
