added google login

--- a/client/edit/slides.html
+++ b/client/edit/slides.html
@@ -3,7 +3,9 @@
 </head>
 
 <body>
+  {{loginButtons align="right"}}
   {{renderPage}}
+  {{!>logs_bootstrap}}
 </body>
 
 <template name="view_edit">
