--- a/client/edit/slides.html
+++ b/client/edit/slides.html
@@ -13,7 +13,9 @@
     {{> menu}}
   </div>
   <div class="theContents">
+    {{#isolate}}
     {{renderPage}}
+    {{/isolate}}
   </div>
 </template>
 
