fixing issue #22 concerning undesired change of autoSlide

--- a/client/show/xreveal.html
+++ b/client/show/xreveal.html
@@ -31,6 +31,7 @@
 </template>
 
 <template name="reveal_arg">
+  <input id="autoSlide" type="hidden" value="{{autoSlide}}"> 
   <link rel="stylesheet" href="css/reveal.min.css">
   <link rel="stylesheet" href="css/theme/default.css" id="theme">
   <!-- For syntax highlighting -->
