--- a/client/edit/slides.html
+++ b/client/edit/slides.html
@@ -32,7 +32,7 @@
 
 <template name="view_edit">
   <div id="show-nav">{{> show_nav}}</div>
-	<div id="main-pane">
+	<div id="main-pane" style="padding: 20px;">
   	<h1>List of slides</h1>
   	<div>
   		{{> slide_list}}
