third time's the charm: a slower but less finicky way.

--- a/client/edit/slides.html
+++ b/client/edit/slides.html
@@ -59,7 +59,7 @@
     <!-- these two can overlap -->
     <div class="statusDot"></div>
     <div class="show-slide"></div>
-		<div class="slide-text">{{text}}</div>
+		<div class="slide-text">{{ind}} {{text}}</div>
 	</li>
 </template>
 
