cleaner, more satisfying solution to scrolling issue #29

--- a/client/edit/slides.html
+++ b/client/edit/slides.html
@@ -13,9 +13,9 @@
     {{> menu}}
   </div>
   <div class="theContents">
-    {{!#isolate}}
+    {{#isolate}}
     {{renderPage}}
-    {{!/isolate}}
+    {{/isolate}}
   </div>
 </template>
 
