added custom show to menu

--- a/client/core/core/core-ui.html
+++ b/client/core/core/core-ui.html
@@ -26,6 +26,7 @@
     <li><a href="/edit">Edit My Slides</a></li>
     <li><a href="/reveal">My Show</a></li>
     <li><a href="/all">Public Show</a></li>
+    <li><a href="/custom">Custom Show</a></li>
     <li><a href="/revealp">Simple Panels</a></li>
     <!-- <li><a href="/reveals">Reveal Panels</a></li> -->
   </ul>
