button in button panel to show/hide select-people menu

--- a/client/show/xreveal.html
+++ b/client/show/xreveal.html
@@ -26,7 +26,10 @@
 </template>
 
 <template name="button_panel">
-<aside class="button-panel" style="display: block;"><div class="auto-button"></div></aside>
+<aside class="button-panel" style="display: block;">
+  <div class="auto-button enabled"></div>
+  <div class="select-people-button"></div>
+</aside>
 </template>
 
 <template name="reveal_arg">
